# universal-ai-chat

./: .gitignore  README.md  pyproject.toml
config-examples/: codex-config.toml  gemini-settings.json
docs/: claude-code-mcp-docs.md  codex-mcp-docs.md  gemini-mcp-docs.md
src/universal_ai_chat/: __init__.py  indexer.py  server.py  shared_memory.py
