[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "universal-ai-chat"
version = "1.0.0"
description = "Universal AI Chat MCP Server - Real-time communication between Claude Code, OpenAI Codex CLI, and Gemini CLI"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
    { name = "Marc", email = "marc@example.com" }
]
keywords = ["mcp", "claude", "codex", "gemini", "ai", "chat", "multi-agent"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Communications :: Chat",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "mcp>=1.1.0",
    "httpx>=0.27.0",
    "qdrant-client>=1.9.0",
    "sentence-transformers>=3.0.0",
    "websockets>=12.0",
    "redis>=5.0.0",
    "aiofiles>=24.1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "black>=24.0.0",
    "ruff>=0.5.0",
]
vector = [
    "qdrant-client>=1.9.0",
    "sentence-transformers>=3.0.0",
    "fastembed>=0.3.0",
]

[project.scripts]
universal-ai-chat = "universal_ai_chat.server:main"
uac-index-docs = "universal_ai_chat.indexer:main"

[project.urls]
Homepage = "https://github.com/marc/universal-ai-chat"
Documentation = "https://github.com/marc/universal-ai-chat#readme"

[tool.hatch.build.targets.wheel]
packages = ["src/universal_ai_chat"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W"]
ignore = ["E501"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
